src/main/java/com/example/schedulerv2/error/errorCode/ErrorCode.java
package com.example.schedulerv2.error.errorCode;


import org.springframework.http.HttpStatus;

public interface ErrorCode {
    HttpStatus getHttpStatus();
    String getCode();
    String getMessage();

}
